# multipi

./: .gitignore  CMakeLists.txt  Makefile  compute.c  main  main.c  pi.c  pi.h  profile.sh
cmake/Modules/: FindGMP.cmake
